tests/ui/lint/snapshots/constant_cast_overflow_unicode_rune_literal_alias_target.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Constant conversion overflow
   ╭─[test.lis:5:11]
 4 │ fn main() {
 5 │   let _ = '\u{1F600}' as Small
   ·           ──────────┬─────────
   ·                     ╰── constant `128512` overflows `Small`
 6 │ }
   ╰────
  help: This expression always evaluates to `128512`, and `Small` must be in range `-32768` to `32767` · code: [infer.constant_conversion_overflow]
