tests/ui/lint/snapshots/constant_overflow_const_declaration.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Constant overflow
   ╭─[test.lis:2:13]
 1 │ 
 2 │ const BIG = 9223372036854775807 + 1
   ·             ───────────┬───────────
   ·                        ╰── constant `9223372036854775808` overflows `int`
 3 │ 
   ╰────
  help: This expression always evaluates to `9223372036854775808`, and `int` must be in range `-9223372036854775808` to `9223372036854775807` · code: [infer.constant_overflow]
