tests/ui/lint/snapshots/constant_overflow_folded_shift.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Constant overflow
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let _ = 1 << 63
   ·           ───┬───
   ·              ╰── constant `9223372036854775808` overflows `int`
 4 │ }
   ╰────
  help: This expression always evaluates to `9223372036854775808`, and `int` must be in range `-9223372036854775808` to `9223372036854775807` · code: [infer.constant_overflow]
