tests/ui/lint/snapshots/dead_code_after_continue.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unreachable code after continue
   ╭─[test.lis:5:5]
 4 │     continue;
 5 │     let x = 1;
   ·     ────┬────
   ·         ╰── unreachable from this point onward
 6 │     x
   ╰────
  help: Remove this line and all code after it · code: [lint.dead_code_after_continue]
