tests/ui/lint/snapshots/dead_code_after_diverging_call.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unreachable code after diverging function call
   ╭─[test.lis:8:3]
 7 │   diverge();
 8 │   let x = 1;
   ·   ────┬────
   ·       ╰── unreachable from this point onward
 9 │   x
   ╰────
  help: Remove this line and all code after it · code: [lint.dead_code_after_diverging_call]
